--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -75,22 +75,17 @@ body {
 .text-navbar{
   color: #f5f5f5;
   text-decoration: none;
-  display: flex;
+  margin-left: auto !important;
 }
 .link-home {
   text-decoration: none;
   color: #333333;
+  margin-left: auto;
 }
 .link-home:hover {
-  text-decoration: none;
-  color: #333333;
+  color: #333333 ;
+  font-size: 1em;
 }
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
 .navbar img {
   float: left;
   margin-right: 10px;
