--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,17 +17,13 @@
                     <a href="{{ url_for('inicio') }}">
                         <img src="/static/img/logo.png" alt="Logo" >
                     </a>
-                    <a class="text-navbar " href="{{ url_for('logout') }}">Cerrar Sesión</a>           
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              </div>
+                    <a class="text-navbar ml-auto" href="{{ url_for('logout') }}">Cerrar Sesión</a>           
+                </div>
             </div>
-          </nav>
+        </nav>
     <main>
          
-    <ul class="nav justify-content-center mt-5 mb-3">
+    <ul class="nav justify-content-center mt-5 mb-3 ">
         <li class="nav-item">
             <a class="nav-link" href="{{url_for('alta')}}">
                 <img src="static/img/Matricula.jpeg" style="width: 1.8em; margin-right: 5px;">
