--- a/src/templates/egresos.html
+++ b/src/templates/egresos.html
@@ -14,39 +14,54 @@
                 <form action="{{ url_for('egresos')}}" method="POST">
                     <div class="row mb-3">
                         <div class="col-md-3">
-                            <label >Nombre del servicio <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="servicios"required>
+                            <label >Nombre del servicio o gasto <span class="campo-obligatorio">*</span></label>
+                            <input type="text" class="form-control mb-3" name="servicios"required value="{{ form_data.servicios if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Fecha de pago <span class="campo-obligatorio">*</span></label>
-                            <input type="date" class="form-control mb-3" name="fecha_pago"required>
+                            <input type="date" class="form-control mb-3" name="fecha_pago"required value="{{ form_data.fecha_pago if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Monto <span class="campo-obligatorio">*</span></label>
-                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" required/>
+                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" required value="{{ form_data.monto if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
-                            <label >Medios de pago <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="medios_de_pago"required>
+                            <label>Medios de pago <span class="campo-obligatorio">*</span></label>
+                            <select class="form-control mb-3" name="medios_de_pago" required value="{{ form_data.medios_de_pago if form_data else '' }}">
+                                <option value="Efectivo" {{ 'selected' if data.medios_de_pago == 'Efectivo' else '' }}>Efectivo</option>
+                                <option value="Mercado pago" {{ 'selected' if data.medios_de_pago == 'Mercado pago' else '' }}>Mercado pago</option>
+                                <option value="Cuenta DNI" {{ 'selected' if data.medios_de_pago == 'Cuenta DNI' else '' }}>Cuenta DNI</option>
+                            </select>
                         </div>
                         <div class="col-md-3">
                             <button class="btn btn-primary mb-3 mt-4" type="submit">Guardar</button>
                         </div>
                     </div>
+                </div>
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div class="alert alert-danger" role="alert">
+                    {% for category, message in messages %}
+                    {{ message }}
+                    {% endfor %}
+                </div>
+                {% endif %}
+                {% endwith %}
+                </div>
                     <a href="/inicio" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
                 </form>
 
-              
-                <table class="table table-bordered">
+                <div class="table-container">
+                    <table class="table table-bordered">
                     <thead>
-                        <th scope="col">#</th>
-                        <th scope="col">Nombre del servicio</th>
-                        <th scope="col">Fecha de pago</th>
-                        <th scope="col">Monto</th>
-                        <th scope="col">Medio de pago</th>
-                        <th scope="col">Editar</th>
-                        <th scope="col">Eliminar</th>
+                        <th class="title" scope="col">#</th>
+                        <th class="title" scope="col">Nombre del servicio o gasto</th>
+                        <th class="title" scope="col">Fecha de pago</th>
+                        <th class="title" scope="col">Monto</th>
+                        <th class="title" scope="col">Medio de pago</th>
+                        <th class="title" scope="col"colspan="2">Acciones</th>
                     </thead>
+                </div>
                     <tbody>
                         {% for d in data %}
                         <tr>
@@ -75,13 +90,18 @@
                                         <form action="{{ url_for('editaregresos', id=d.id) }}" method="POST">
                                             <input type="hidden" name="id" value="{{ d.id }}">
                                             <label>Nombre del servicio <span class="campo-obligatorio">*</span></label>
-                                            <input type="text" class="form-control mb-3" name="servicios" value="{{ d.servicios}}"required>
+                                            <input type="text" class="form-control mb-3" name="servicios" value="{{ d.servicios}}"required value="{{ form_data.servicios if form_data else '' }}">
                                             <label>Fecha de pago <span class="campo-obligatorio">*</span></label>
-                                            <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}"required>
+                                            <input type="date" class="form-control mb-3" name="fecha_pago" value="{{ d.fecha_pago }}"required value="{{ form_data.fecha_pago if form_data else '' }}">
                                             <label>Monto <span class="campo-obligatorio">*</span></label>
-                                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" value="{{ d.monto }}" required>
-                                            <label>Medio de pago <span class="campo-obligatorio">*</span></label>
-                                            <input type="text" class="form-control mb-3" name="medios_de_pago" value="{{ d.medios_de_pago }}"required>
+                                            <input type="number" class="form-control mb-3" name="monto" placeholder="$0.00" value="{{ d.monto }}" required value="{{ form_data.monto if form_data else '' }}">
+                                            <div class="col-md-3">
+                                                <label>Medios de pago <span class="campo-obligatorio">*</span></label>
+                                                <select class="form-control mb-3 custom-select" name="medios_de_pago" required>
+                                                    {% for option in ['Efectivo', 'Mercado pago', 'Cuenta DNI'] %}
+                                                        <option value="{{ option }}" {% if d.medios_de_pago == option %}selected{% endif %}>{{ option }}</option>
+                                                    {% endfor %}
+                                                </select>
                                             <div class="modal-footer">
                                                 <button type="submit" class="btn btn-primary">Guardar cambios</button>
                                     </div>
