--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -15,88 +15,113 @@
                     <div class="row mb-3">
                         <div class="col-md-3">
                             <label >Nombre <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="nombre"required>
+                            <input type="text" class="form-control mb-3" name="nombre"required value="{{ form_data.nombre if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Apellido <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="apellido"required>
+                            <input type="text" class="form-control mb-3" name="apellido"required value="{{ form_data.apellido if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Email <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="email"required>
+                            <input type="text" class="form-control mb-3" name="email"required value="{{ form_data.email if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Telefono <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="telefono"required>
+                            <input type="number" class="form-control mb-3" name="telefono"required value="{{ form_data.telefono if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Fecha de nacimiento <span class="campo-obligatorio">*</span></label>
-                            <input type="date" class="form-control mb-3" name="fecha_nacimiento"required>
+                            <input type="date" class="form-control mb-3" name="fecha_nacimiento"required value="{{ form_data.fecha_nacimiento if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Fecha de inicio <span class="campo-obligatorio">*</span></label>
-                            <input type="date" class="form-control mb-3" name="fecha_inicio"required>
+                            <input type="date" class="form-control mb-3" name="fecha_inicio"required value="{{ form_data.fecha_inicio if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Colegio <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="colegio"required>
+                            <input type="text" class="form-control mb-3" name="colegio"required value="{{ form_data.colegio if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Curso <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="curso"required>
+                            <select class="form-control mb-3 custom-select" name="dia" required value="{{ form_data.curso if form_data else '' }}">
+                                {% for option in ['Primero', 'Segundo', 'Tercero','Cuarto','Quinto','Sexto'] %}
+                                <option value="{{ option }}" {% if data.curso == option %}selected{% endif %}>{{ option }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="col-md-3">
-                            <label >Nivel educativo <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="nivel_educativo"required>
+                            <label>Nivel educativo <span class="campo-obligatorio">*</span></label>
+                            <select class="form-control mb-3 custom-select" name="nivel_educativo" required value="{{ form_data.nivel_educativo if form_data else '' }}">
+                                {% for option in ['Primario', 'Secundario', 'Terciario'] %}
+                                <option value="{{ option }}" {% if data.nivel_educativo == option %}selected{% endif %}>{{ option }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="col-md-3">
                             <label >Nombre tutor <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="nombre_titular"required>
+                            <input type="text" class="form-control mb-3" name="nombre_titular"required value="{{ form_data.nombre_titular if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Telefono tutor <span class="campo-obligatorio">*</span></label>
-                            <input type="number" class="form-control mb-3" name="telefono_titular"required>
+                            <input type="number" class="form-control mb-3" name="telefono_titular"required value="{{ form_data.telefono_titular if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Dia <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="dia"required>
+                            <select class="form-control mb-3 custom-select" name="dia" required value="{{ form_data.dia if form_data else '' }}">
+                                {% for option in ['Lunes', 'Martes', 'Miercoles','Jueves','Viernes'] %}
+                                <option value="{{ option }}" {% if data.dia == option %}selected{% endif %}>{{ option }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="col-md-3">
                             <label >Horario <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="horario"required>
+                            <input type="time" id="horario" name="horario"required value="{{ form_data.horario if form_data else '' }}">
                         </div>
                         <div class="col-md-3">
                             <label >Materia <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="materia"required>
+                            <select class="form-control mb-3 custom-select" name="dia" required value="{{ form_data.materia if form_data else '' }}">
+                                {% for option in ['Inglés', 'Matemática', 'Practicás del lenguaje'] %}
+                                <option value="{{ option }}" {% if data.materia == option %}selected{% endif %}>{{ option }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div class="col-md-3">
                             <button class="btn btn-primary mb-3 mt-4" type="submit">Guardar</button>
-                        </div>
                     </div>
+                </div>
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div class="alert alert-danger" role="alert">
+                    {% for category, message in messages %}
+                    {{ message }}
+                    {% endfor %}
+                </div>
+                {% endif %}
+                {% endwith %}
                     <a href="/inicio" class="btn, text-center mb-4 mt-4 p-2" style="border: none;">Inicio</a>
                 </form>
 
-                <table class="table table-bordered">
+                <div class="table-container">
+                    <table class="table table-bordered">
                     <thead>
-                        <th scope="col">#</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Apellido</th>
-                        <th scope="col">Email</th>
-                        <th scope="col">Telefono</th>
-                        <th scope="col">Nacimiento</th>
-                        <th scope="col">Inicio</th>
-                        <th scope="col">Colegio</th>
-                        <th scope="col">Curso</th>
-                        <th scope="col">Nivel</th>
-                        <th scope="col">Nombre tutor</th>
-                        <th scope="col">Telefono tutor</th>
-                        <th scope="col">Día</th>
-                        <th scope="col">Horario</th>
-                        <th scope="col">Materia</th>
-                        <th scope="col">Editar</th>
-                        <th scope="col">Eliminar</th>
+                        <th class="title" scope="col">#</th>
+                        <th class="title" scope="col">Nombre</th>
+                        <th class="title" scope="col">Apellido</th>
+                        <th class="title" scope="col">Email</th>
+                        <th class="title" scope="col">Telefono</th>
+                        <th class="title" scope="col">Nacimiento</th>
+                        <th class="title" scope="col">Inicio</th>
+                        <th class="title" scope="col">Colegio</th>
+                        <th class="title" scope="col">Curso</th>
+                        <th class="title" scope="col">Nivel</th>
+                        <th class="title" scope="col">Nombre tutor</th>
+                        <th class="title" scope="col">Telefono tutor</th>
+                        <th class="title" scope="col">Día</th>
+                        <th class="title" scope="col">Horario</th>
+                        <th class="title" scope="col">Materia</th>
+                        <th class="title" scope="col"colspan="2">Acciones</th>
                     </thead>
-               
+                </div>
                 <tbody>
                     {% for d in data %}
                     <tr>
@@ -139,9 +164,9 @@
                                 <label >Telefono <span class="campo-obligatorio">*</span></label>
                                 <input type="text" class="form-control mb-3" name="telefono" value="{{d.telefono}}"required>
                                 <label >Fecha de nacimiento <span class="campo-obligatorio">*</span></label>
-                                <input type="text" class="form-control mb-3" name="fecha_nacimiento" value="{{d.fecha_nacimiento}}"required>
+                                <input type="date" class="form-control mb-3" name="fecha_nacimiento" value="{{d.fecha_nacimiento}}"required>
                                 <label >Fecha de inicio <span class="campo-obligatorio">*</span></label>
-                                <input type="text" class="form-control mb-3" name="fecha_inicio" value="{{d.fecha_inicio}}"required>
+                                <input type="date" class="form-control mb-3" name="fecha_inicio" value="{{d.fecha_inicio}}"required>
                                 <label >Colegio <span class="campo-obligatorio">*</span></label>
                                 <input type="text" class="form-control mb-3" name="colegio" value="{{d.colegio}}"required>
                                 <label >Curso <span class="campo-obligatorio">*</span></label>
