--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,29 +1,27 @@
 html,
 body {
-    font-family: Arial, sans-serif;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5 !important;
+  height: 100%;
 }
 
-
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  background-color: #f5f5f5 !important;
+}
 
 /*Log In*/
 .top-bar{
   height:4em; 
   background-color: #FBD374;
+  width: 100%; 
   display: flex;
   align-items: center;
 }
 .top-bar img {
   margin-right: 10px; 
 }
-.contenedor-login{
-  margin-top: 7em;
-}
-
 .form-signin {
   width: 100%;
   height: 30em;
@@ -33,10 +31,23 @@ body {
   border-radius: 0.5em;
 }
 
-.input-login{
-  height: 3em !important;
-  border-radius: 0.5em;
-  border: none;
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+.form-control.custom-input {
+  height: 3em; 
+}
+
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 5px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .txt-login{
@@ -48,8 +59,6 @@ body {
   background-color: #FBD374;
   color: #696969;
   border-radius: 1em;
-  border: none;
-
 }
 .perfil-container {
   display: flex;
@@ -68,24 +77,56 @@ body {
 
 /*Home*/
 
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.menu-item {
+  flex: 1;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
+  transition: transform 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.menu-item:hover {
+  transform: translateY(-5px);
+}
+
+.menu-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.menu-item h3 {
+  margin-top: 10px;
+  font-size: 1.2rem;
+}
 .navbar {
   background-color: #7ea56a;
 }
 
-.text-navbar{
-  color: #f5f5f5;
+.navbar a {
+  float: left;
+  display: block;
+  color: rgb(193, 7, 7);
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  margin-left: auto !important;
 }
-.link-home {
-  text-decoration: none;
-  color: #333333;
-  margin-left: auto;
+
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
-.link-home:hover {
-  color: #333333 ;
-  font-size: 1em;
-}
+
 .navbar img {
   float: left;
   margin-right: 10px;
@@ -106,14 +147,6 @@ body {
   text-align: left; /* Alinea los elementos de la lista hacia la izquierda */
 }
 
-/*TABS*/
-.nav-link{
-  text-decoration: none;
-  color: #333333 !important;
-  font: 1em;
-  font-weight: 400;
-}
-
 /*Alta de alumnos*/
 
 .form-label-alta{
@@ -125,6 +158,9 @@ body {
   color: red;
 }
 
+th.title {
+  text-align: center;
+}
 
 .table-container {
   overflow-x: auto;
@@ -134,23 +170,4 @@ body {
 /* Establece el ancho del desplegable al 100% del contenedor */
 .custom-select {
   width: 100%;
-}
-.btn-operacion{
-  padding: 0.4em;
-  background-color: #FBD374;
-  color: white;
-  border-radius: 1em;
-  cursor: pointer;
-}
-.col-tabla{
-  font-weight: 500;
-  text-align: center;
-}
-.btn-guardar{
-  background-color: #FBD374;
-  color: white;
-  border:none;
-  border-radius: 1em;
-  padding: 0.5em;
-  font-weight: 400;
 }
