--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,9 +8,9 @@
     {% block content %}
         
         <div class="col-md-10 container">
-        <p class="text-left"> Nuevo alumno</p>
-        <div class="card mb-5"> 
-            <div class = "card-body" >
+        <div class="card"> 
+            <p class="text-left"> Alta de alumno</p>
+            <div class = "card-body">
                 <form action="/alumnos" method="POST">
                     <div class="row mb-3">
                         <div class="col-md-3">
@@ -86,8 +86,7 @@
                             </select>
                         </div>
                         <div class="col-md-3">
-                            <button class="btn-guardar mb-3 mt-4" type="submit">Guardar alumno</button>
-                        </div>
+                            <button class="btn btn-primary mb-3 mt-4" type="submit">Guardar</button>
                     </div>
                 </div>
                 {% with messages = get_flashed_messages(with_categories=true) %}
@@ -196,137 +195,8 @@
                 </tbody>
             </table>
             </div>
-            
         </div>
-        
     </div>
-    <table class="table table-bordered m-1 mb-5" style="background-color: white;">
-        <thead>
-            <th scope="col"></th>
-            <th scope="col" class="col-tabla">Nombre</th>
-            <th scope="col" class="col-tabla">Apellido</th>
-            <th scope="col" class="col-tabla">Email</th>
-            <th scope="col" class="col-tabla">Telefono</th>
-            <th scope="col" class="col-tabla">Nacimiento</th>
-            <th scope="col" class="col-tabla">Inicio</th>
-            <th scope="col" class="col-tabla">Colegio</th>
-            <th scope="col" class="col-tabla">Curso</th>
-            <th scope="col" class="col-tabla">Nivel</th>
-            <th scope="col" class="col-tabla">Nombre tutor</th>
-            <th scope="col" class="col-tabla">Telefono tutor</th>
-            <th scope="col" class="col-tabla">Día</th>
-            <th scope="col" class="col-tabla">Horario</th>
-            <th scope="col" class="col-tabla">Materia</th>
-            <th scope="col"></th>
-            <th scope="col"></th>
-        </thead>
-   
-    <tbody>
-        {% for d in data %}
-        <tr>
-            <td> {{d.id}}</td>
-            <td>{{d.nombre}}</td>
-            <td>{{d.apellido}}</td>
-            <td>{{d.email}}</td>
-            <td>{{d.telefono}}</td>
-            <td>{{d.fecha_nacimiento}}</td>
-            <td>{{d.fecha_inicio}}</td>
-            <td>{{d.colegio}}</td>
-            <td>{{d.curso}}</td>
-            <td>{{d.nivel_educativo}}</td>
-            <td> {{d.nombre_titular}}</td>
-            <td>{{d.telefono_titular}}</td>
-            <td>{{d.dia}}</td>
-            <td>{{d.horario}}</td>
-            <td>{{d.materia}}</td>
-            <td class="text-center "> <i class="btn-operacion bi bi-pencil-square " id="btn-editar{{d.id}}" data-bs-toggle="modal" data-bs-target="#modal{{d.id}}"></i></td>
-            <td class="text-center"> <a href="{{url_for('eliminar', id=d.id)}}" ><i class="btn-operacion bi bi-trash"></i></a></td>
-        </tr>
-
-        <!--MODAL -->
-
-        <div class="modal fade" id="modal{{d.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog  modal-xl">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">{{d.nombre}}</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                <form action="/editar/{{d.id}}" method="POST">  
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-2">
-                            <label >Nombre <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="nombre" value="{{d.nombre}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Apellido <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="apellido" value="{{d.apellido}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Email <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="email" value="{{d.email}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Telefono <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="telefono" value="{{d.telefono}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Fecha de nacimiento <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="fecha_nacimiento" value="{{d.fecha_nacimiento}}"required>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-2">
-                            <label >Fecha de inicio <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="fecha_inicio" value="{{d.fecha_inicio}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Colegio <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="colegio" value="{{d.colegio}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Curso <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="curso" value="{{d.curso}}"required>
-                        </div>     
-                        <div class="col-md-2">
-                            <label >Nivel educativo <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="nivel_educativo" value="{{d.nivel_educativo}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Nombre tutor <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="nombre_titular" value="{{d.nombre_titular}}"required>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-md-2">
-                            <label >Telefono tutor <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="telefono_titular" value="{{d.telefono_titular}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Dia <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="dia" value="{{d.dia}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Horario <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="horario" value="{{d.horario}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <label >Materia <span class="campo-obligatorio">*</span></label>
-                            <input type="text" class="form-control mb-3" name="materia" value="{{d.materia}}"required>
-                        </div>
-                        <div class="col-md-2">
-                            <button type="submit" class="btn-guardar">Guardar cambios</button>
-                        </div>
-                    </div> 
-                </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        {% endfor %}
-    </tbody>
-</table>
     </div>
     {% endblock %}
 </body>
