--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -107,6 +107,12 @@
             <img src="static/img/Egresos.jpeg" alt="Egresos">
             </a>
         </div>
+        <div class="menu-item">
+            <a href="{{ url_for('resumen') }}">
+            <h3>resumen</h3>
+            <img src="static/img/Egresos.jpeg" alt="resumen">
+            </a>
+        </div>
     </div>
 </body>
 </html>
